--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "homepage": "https://github.com/laumiqv/connect-wallet#readme",
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.4.2",
-    "@walletconnect/web3-provider": "^1.6.6",
+    "@walletconnect/ethereum-provider": "^2.9.2",
+    "@walletconnect/modal": "^2.6.1",
     "rxjs": "^7.5.5",
     "tslib": "^2.0.0",
     "web3": "^1.6.1"
