--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/laumiqv/connect-wallet#readme",
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.4.2",
-    "@walletconnect/ethereum-provider": "^2.9.2",
+    "@walletconnect/ethereum-provider": "2.9.1",
     "@walletconnect/modal": "^2.6.1",
     "rxjs": "^7.5.5",
     "tslib": "^2.0.0",
